--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "Kyle Trotter",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kookydev/DiceGame/issues"
+    "url": "https://github.com/kookydev/DiceGame-TDD/issues"
   },
-  "homepage": "https://github.com/kookydev/DiceGame#readme"
+  "homepage": "https://github.com/kookydev/DiceGame-TDD#readme"
 }
